force-app/main/default/objects/FS_IP_Technician_Instructions__c/FS_IP_Technician_Instructions__c.object-meta.xml
<CustomObject>
    <description>Technician Instructions For Installation Process</description>
    <label>Technician Instructions</label>
    <nameField>
        <displayFormat>IPTI_{0000}</displayFormat>
        <label>Technician Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>