force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_7000_Series_Agitated_Brand_Selection__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Agitated_Brand_Selection__c</fullName>
    <formula>IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Agitated_Brands_Selection__c, &quot;Barqs&quot;), &quot;Barqs;&quot;,&quot;&quot;) 
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Agitated_Brands_Selection__c, &quot;Pibb&quot;), &quot;Pibb;&quot;,&quot;&quot;) 
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Agitated_Brands_Selection__c, &quot;Dr Pepper&quot;), &quot;Dr Pepper&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7000 Series Agitated Brand Selections</label>
    <type>Text</type>
</CustomField>