force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_7000_Series_Brand_Option_Selection__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Brand_Option_Selection__c</fullName>
    <formula>TEXT(FS_Instalation_Process__r.FS_7000_Series_Brands_Option_Selections__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7000 Series Brand Option Selections</label>
    <type>Text</type>
</CustomField>