force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_7000_Series_Static_Brand_Selections__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Static_Brand_Selections__c</fullName>
    <formula>IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Statics_Brands_Selection__c, &quot;Hi-C&quot;), &quot;Hi-C;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Statics_Brands_Selection__c, &quot;POWERade&quot;), &quot;POWERade;&quot;, &quot;&quot;)
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Statics_Brands_Selection__c, &quot;Raspberry&quot;), &quot;Raspberry;&quot;, &quot;&quot;)
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Statics_Brands_Selection__c, &quot;Vitamin Water&quot;), &quot;Vitamin Water;&quot;, &quot;&quot;)
&amp;
IF( INCLUDES(FS_Instalation_Process__r.FS_7000_Series_Statics_Brands_Selection__c, &quot;Fuze&quot;), &quot;Fuze&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7000 Series Static Brands Selections</label>
    <type>Text</type>
</CustomField>