force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Cup_Name_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Cup_Name_1__c</fullName>
    <label>Cup Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>