force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_CustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomCreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technician_Instructions2</relationshipName>
    <type>Lookup</type>
</CustomField>