force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Customer_Ice_Fill_Spec__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Ice_Fill_Spec__c</fullName>
    <label>Customer Ice Fill Spec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>