force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_EP_Technician_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_EP_Technician_Instructions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>All PIA forms will not display a parent execution plan related Technician Instruction</inlineHelpText>
    <label>Technician Instructions</label>
    <referenceTo>FS_EP_Technician_Instructions__c</referenceTo>
    <relationshipLabel>Technician Instructions</relationshipLabel>
    <relationshipName>Technician_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>