force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Execution_Plan_Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval__c</fullName>
    <formula>FS_Instalation_Process__r.FS_Execution_Plan_Final_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Plan Final Approval</label>
    <type>Checkbox</type>
</CustomField>