force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_IM_Make__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Make__c</fullName>
    <label>IM Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Cornelius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>