force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_IM_Model_SS__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Model_SS__c</fullName>
    <label>IM Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>