force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Instalation_Process__c.field-meta.xml
<CustomField>
    <fullName>FS_Instalation_Process__c</fullName>
    <label>Installation Process</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Technician Instructions</relationshipLabel>
    <relationshipName>IP_Technician_Instructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>