force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Installer__c.field-meta.xml
<CustomField>
    <fullName>FS_Installer__c</fullName>
    <label>Installer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WFS</fullName>
            </value>
            <value>
                <fullName>Davaco</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>