force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_IP_Equipment_Package__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Equipment_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Package</label>
    <referenceTo>FS_IP_Equipment_Package__c</referenceTo>
    <relationshipLabel>Technician Instruction</relationshipLabel>
    <relationshipName>Technician_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>