force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Is_Coordination_by_Coca_Cola_Req__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Coordination_by_Coca_Cola_Req__c</fullName>
    <label>Is Coordination by Coca-Cola Req?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>