force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Legacy_Equip_during_Freestyle_install__c.field-meta.xml
<CustomField>
    <fullName>FS_Legacy_Equip_during_Freestyle_install__c</fullName>
    <label>Legacy Equip during Freestyle Install</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>