force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Legacy_Equipment_IC_Code_Desc_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Legacy_Equipment_IC_Code_Desc_Qty__c</fullName>
    <label>Legacy Equipment(IC Code/Desc/Qty)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>