force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Path__c.field-meta.xml
<CustomField>
    <fullName>FS_Path__c</fullName>
    <label>Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Floor Chase Way</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>