force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Protocol_for_Existing_Lines__c.field-meta.xml
<CustomField>
    <fullName>FS_Protocol_for_Existing_Lines__c</fullName>
    <label>Protocol for Existing Lines</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discard legacy line completely</fullName>
            </value>
            <value>
                <fullName>Discard legacy line after Tee-Joint</fullName>
            </value>
            <value>
                <fullName>Cap legacy line and store future Use</fullName>
            </value>
            <value>
                <fullName>Dry location - no current lines on-site</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>