force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Requirements_IM__c.field-meta.xml
<CustomField>
    <fullName>FS_Requirements_IM__c</fullName>
    <label>Requirements (IM)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No action required-Manual Fill</fullName>
            </value>
            <value>
                <fullName>Remove existing IM and re-installed</fullName>
            </value>
            <value>
                <fullName>Remove existing IM and convert to Manual Fill</fullName>
            </value>
            <value>
                <fullName>Remove existing IM prior to install and install new top mount at time of install</fullName>
            </value>
            <value>
                <fullName>Remove existing IM prior to install and install new top mount at later date</fullName>
            </value>
            <value>
                <fullName>Remove existing IM &amp; Relocate to Kitchen</fullName>
            </value>
            <value>
                <fullName>IM not Present- Install New Ice Maker</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Special Instructions)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>