force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Size_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Size_2__c</fullName>
    <label>Size 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>