force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Special_Instructions_KO_DOE__c.field-meta.xml
<CustomField>
    <fullName>FS_Special_Instructions_KO_DOE__c</fullName>
    <label>Special Instructions (KO/DOE)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>