force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Special_Instructions_Water_Filter__c.field-meta.xml
<CustomField>
    <fullName>FS_Special_Instructions_Water_Filter__c</fullName>
    <label>Special Instructions (Water Filter)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>