force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Spicy_Cherry__c.field-meta.xml
<CustomField>
    <fullName>FS_Spicy_Cherry__c</fullName>
    <formula>TEXT(FS_Instalation_Process__r.FS_Spicy_Cherry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spicy Cherry</label>
    <type>Text</type>
</CustomField>