force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Time_to_call_home__c.field-meta.xml
<CustomField>
    <fullName>FS_Time_to_call_home__c</fullName>
    <label>Time to call home</label>
    <length>25</length>
    <type>Text</type>
</CustomField>