force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Top_Off_Button__c.field-meta.xml
<CustomField>
    <fullName>FS_Top_Off_Button__c</fullName>
    <label>Top Off Button</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>