force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/FS_Water_Booster_Location__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Booster_Location__c</fullName>
    <label>Water Booster Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top of HFCS Rack</fullName>
            </value>
            <value>
                <fullName>Add Shelf/Mount to Wall</fullName>
            </value>
            <value>
                <fullName>Top of Legacy Syrup Rack</fullName>
            </value>
            <value>
                <fullName>Underneath Self-Serve Counter</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>