force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/Outlet_SAP__c.field-meta.xml
<CustomField>
    <fullName>Outlet_SAP__c</fullName>
    <formula>FS_Instalation_Process__r.FS_Outlet__r.FS_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet SAP#</label>
    <type>Text</type>
</CustomField>