force-app/main/default/objects/FS_IP_Technician_Instructions__c/fields/Water_Filter_Installer_Email__c.field-meta.xml
<CustomField>
    <fullName>Water_Filter_Installer_Email__c</fullName>
    <label>Water Filter Installer Contact Email</label>
    <type>Email</type>
</CustomField>