force-app/main/default/objects/FS_IP_Technician_Instructions__c/validationRules/Make_RecordType_Name_NonEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_RecordType_Name_NonEditable</fullName>
    <active>true</active>
    <description>Making the Record Type field editable for FET System Admin</description>
    <errorConditionFormula>AND( (PRIORVALUE(RecordTypeId)&lt;&gt; &#39;&#39;), ISCHANGED(RecordTypeId),AND($Profile.Name &lt;&gt;&#39;System Administrator&#39;,$Profile.Name &lt;&gt;&#39;FET System Admin&#39;))</errorConditionFormula>
    <errorMessage>This Profile doesn&#39;t have permission to change the Record Type</errorMessage>
</ValidationRule>