force-app/main/default/objects/FS_IP_Technician_Instructions__c/validationRules/TechnicianInstruction_Edit_Privileges_IP.validationRule-meta.xml
<ValidationRule>
    <fullName>TechnicianInstruction_Edit_Privileges_IP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(FS_Instalation_Process__r.FS_Execution_Plan_Final_Approval_PM__c,&#39;Approved&#39;), 
$Profile.Name != &quot;FS AC_P&quot;, 
$Profile.Name != &quot;FS PM_P&quot;, 
$Profile.Name != &quot;FS Admin PM_P&quot;, 
$Profile.Name != &quot;FET System Admin&quot;, 
$Profile.Name != &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Technician Instructions(IP) cannot be updated after Execution Plan has been approved. Please Contact your  PM for any necessary edits.</errorMessage>
</ValidationRule>